# gprocess-man

./: .gitignore  Cargo.toml  README.md
client/: bun.lockb  package.json  rollup.config.mjs  tsconfig.json
client/examples/golem/: cat.ts  echo.ts  sh.ts
client/examples/golem/browser-sh/: gprocess-man.js  index.html  script.js
client/examples/localhost/: cat.ts  echo.ts  sh.ts
client/src/: browser.ts  client.ts  example.ts  gprocess.ts  index.ts  process.ts  process_manager.ts
client/src/socket/: index.ts  tcp.ts  ws-browser.ts  ws.ts
examples/: mktty.rs
gprocess-proto/: Cargo.toml  build.rs
gprocess-proto/protos/: gprocess.proto
gprocess-proto/src/: lib.rs
src/: command.rs  handler.rs  main.rs  network.rs  process_manager.rs  utils.rs
src/handler/: close_request.rs  ps_request.rs  read_request.rs  signal_request.rs  start_request.rs  wait_request.rs  write_request.rs
src/routes/api/: health.rs  v1.rs
