[package]
name = "gprocess-man"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/gprocess-man"
repository = "https://github.com/golemfactory/gprocess-man"
license = "GPL-3.0"
description = "Golem Process Manager"

[dependencies]
gprocess-proto = { path = "gprocess-proto" }
axum.workspace = true
clap.workspace = true
futures.workspace = true
shadow-rs.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[dev-dependencies]

[workspace]
members = ["gprocess-proto"]

[workspace.dependencies]
axum = { version = "0.7.5", features = ["ws"] }
bytes = "1.7.1"
clap = { version = "4.5.13", features = ["cargo"] }
futures = "0.3.30"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
shadow-rs = "0.31.1"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
