[package]
name = "gprocess-man"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
homepage = "https://github.com/golemfactory/gprocess-man"
repository = "https://github.com/golemfactory/gprocess-man"
license = "GPL-3.0"
description = "Golem Process Manager"

[dependencies]
gprocess-proto = { path = "gprocess-proto" }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
nix.workspace = true
prost.workspace = true
shadow-rs.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[dev-dependencies]

[workspace]
members = ["gprocess-proto"]

[[bin]]
name = "sample-cli"
path = "bin/sample-cli.rs"

[[bin]]
name = "sample-testd"
path = "bin/testd.rs"

[workspace.dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.15", features = ["cargo"] }
futures = "0.3.30"
nix = { version = "0.29.0", features = ["process", "signal"] }
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
shadow-rs = "0.31.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
